--- a/index.html
+++ b/index.html
@@ -1,64 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Character encoding for proper text rendering -->
-  <meta charset="UTF-8">
-
-  <!-- Page title shown in browser tab and screen readers -->
-  <title>Don Norman – Home</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Don Norman - HCI CG 2026</title>
 </head>
 <body>
 
-  <!-- Page header: identifies the site and its purpose -->
-  <header>
-    <h1>Don Norman</h1>
-    <p>Human–Computer Interaction Philosopher</p>
-  </header>
+    <!-- Header Section -->
+    <header>
+        <h1>Don Norman</h1>
+        <h2>Human–Computer Interaction Philosopher</h2>
+    </header>
 
-  <!-- Primary navigation landmark for keyboard and screen reader users -->
-  <nav aria-label="Primary navigation">
-    <ul>
-      <!-- Current page is indicated using aria-current -->
-      <li>
-        <a href="index.html" aria-current="page">Home</a>
-      </li>
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cv.html">CV</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="analysis.html">Interaction Analysis</a></li>
+            <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+            <li><a href="assignment01.html">Lab 01 Rules</a></li>
+        </ul>
+    </nav>
 
-      <!-- Navigation links to other site sections -->
-      <li><a href="cv.html">CV</a></li>
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="analysis.html">Interaction Analysis</a></li>
-      <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
-      <li><a href="assignment01.html">Lab 01 Rules</a></li>
+    <!-- Main Content -->
+    <main>
+        <!-- Biography Section -->
+        <section>
+            <h3>Biography</h3>
+            <img src="portrait.jpg" alt="Portrait of Don Norman">
+            <p>
+                Don Norman is a pioneer in the field of Human–Computer Interaction, known for his work on 
+                user-centered design, usability, and cognitive engineering. He has authored several influential 
+                books including <em>The Design of Everyday Things</em> and contributed to both academia and industry 
+                in shaping how humans interact with technology.
+            </p>
+        </section>
+    </main>
 
-    </ul>
-  </nav>
-
-  <!-- Main content landmark: unique content of this page -->
-  <main>
-    <section>
-      <!-- Section heading establishes content hierarchy -->
-      <h2>Biography</h2>
-
-      <!-- Informative image with alternative text for accessibility -->
-      <img src="norman.jpg" alt="Portrait of Don Norman">
-
-      <p>
-        Don Norman is a pioneer in the field of Human–Computer Interaction,
-        known for his work on user-centered design, usability, and cognitive
-        engineering.
-      </p>
-    </section>
-  </main>
-
-  <!-- Footer contains meta or supplementary information -->
-  <footer>
-    <p>&copy; 2026 HCI–CG Course</p>
-  <p>
-    <a href="assignment01.html">Lab 01 Instructions</a> |
-    <a href="https://github.com/humeraaa/hci-cg-2026">Starter Code</a> |
-    <a href="https://humeraaa.github.io/hci-cg-2026/">Live Demo</a>
-  </p>
-  </footer>
+    <!-- Footer Section -->
+    <footer>
+        <p>© 2026 HCI–CG Course</p>
+        <p>
+            <a href="assignment01.html">Lab 01 Instructions</a> |
+            <a href="https://github.com/humeraaa/hci-cg-2026">Starter Code</a> |
+            <a href="https://humeraaa.github.io/hci-cg-2026/">Live Demo</a>
+        </p>
+    </footer>
 
 </body>
 </html>
