--- a/cv.html
+++ b/cv.html
@@ -1,67 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Character encoding for consistent text rendering -->
-  <meta charset="UTF-8">
-
-  <!-- Page title shown in browser tab and announced by screen readers -->
-  <title>Don Norman – CV</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Don Norman – CV</title>
 </head>
 <body>
 
-  <!-- Page header: identifies the page -->
-  <header>
-    <h1>Curriculum Vitae</h1>
-  </header>
+    <!-- Header Section -->
+    <header>
+        <h1>Curriculum Vitae</h1>
+    </header>
 
-  <!-- Primary navigation: consistent across all pages -->
-  <nav aria-label="Primary navigation">
-    <ul>
-      <li><a href="index.html">Home</a></li>
+    <!-- Navigation Bar -->
+    <nav aria-label="Primary navigation">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="cv.html" aria-current="page">CV</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="analysis.html">Interaction Analysis</a></li>
+            <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
+            <li><a href="assignment01.html">Lab 01 Rules</a></li>
+        </ul>
+    </nav>
 
-      <!-- Current page is indicated using aria-current -->
-      <li><a href="cv.html" aria-current="page">CV</a></li>
+    <!-- Main Content -->
+    <main>
 
-      <li><a href="contact.html">Contact</a></li>
-      <li><a href="analysis.html">Interaction Analysis</a></li>
-      <li><a href="norman2klm.html">Norman–GOMS–KLM</a></li>
-      <li><a href="assignment01.html">Lab 01 Rules</a></li>
+        <!-- Education Section -->
+        <section>
+            <h2>Education</h2>
+            <ul>
+                <li>PhD in Psychology – University of Pennsylvania (Year)</li>
+                <li>BSc in Engineering – MIT (Year)</li>
+            </ul>
+        </section>
 
-    </ul>
-  </nav>
+        <!-- Work Experience Section -->
+        <section>
+            <h2>Work Experience</h2>
 
-  <!-- Main landmark: unique content of this page -->
-  <main>
+            <article>
+                <h3>Professor of Cognitive Science</h3>
+                <p>University of California, San Diego (Years)</p>
+                <ul>
+                    <li>Teaching and research in cognitive science</li>
+                    <li>Focus on human-computer interaction and usability</li>
+                </ul>
+            </article>
 
-    <section>
-      <h2>Education</h2>
-      <ul>
-        <li>PhD in Psychology – University of Pennsylvania</li>
-        <li>BSc in Engineering – MIT</li>
-      </ul>
-    </section>
+            <article>
+                <h3>Director, Design Lab</h3>
+                <p>Founder of the Nielsen Norman Group (Years)</p>
+                <ul>
+                    <li>Led UX design projects for global clients</li>
+                    <li>Developed usability heuristics and guidelines</li>
+                </ul>
+            </article>
 
-    <section>
-      <h2>Work Experience</h2>
+        </section>
 
-      <!-- Each role is grouped as a separate content unit -->
-      <article>
-        <h3>Professor of Cognitive Science</h3>
-        <p>University of California, San Diego</p>
-      </article>
+    </main>
 
-      <article>
-        <h3>Director, Design Lab</h3>
-        <p>Founder of the Nielsen Norman Group</p>
-      </article>
-    </section>
-
-  </main>
-
-  <!-- Footer contains supplementary navigation and meta information -->
-  <footer>
-    <p><a href="index.html">Back to Home</a></p>
-  </footer>
+    <!-- Footer Section -->
+    <footer>
+        <p>© 2026 HCI–CG Course</p>
+        <p>
+            <a href="assignment01.html">Lab 01 Instructions</a> |
+            <a href="https://github.com/humeraaa/hci-cg-2026">Starter Code</a> |
+            <a href="https://humeraaa.github.io/hci-cg-2026/">Live Demo</a>
+        </p>
+    </footer>
 
 </body>
 </html>
