Corrected image reference and added norman.jpg

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- Biography Section -->
         <section>
             <h3>Biography</h3>
-            <img src="portrait.jpg" alt="Portrait of Don Norman">
+            <img src="norman.jpg" alt="Portrait of Don Norman">
             <p>
                 Don Norman is a pioneer in the field of Human–Computer Interaction, known for his work on 
                 user-centered design, usability, and cognitive engineering. He has authored several influential 
